{
  "version": 4,
  "terraform_version": "1.15.6",
  "serial": 44,
  "lineage": "84afd92e-ad81-5b84-7099-b38d4baa566c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07a7292025dca094b",
            "arn": "arn:aws:ec2:us-east-1:028987315631:elastic-ip/eipalloc-07a7292025dca094b",
            "association_id": "eipassoc-0f9043be1fe1f967e",
            "domain": "vpc",
            "id": "eipalloc-07a7292025dca094b",
            "network_border_group": "us-east-1",
            "network_interface": "eni-089146853e6a40cb6",
            "private_dns": "ip-10-0-1-126.ec2.internal",
            "private_ip": "10.0.1.126",
            "public_dns": "ec2-107-21-108-79.compute-1.amazonaws.com",
            "public_ip": "107.21.108.79",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terragrunt",
              "Name": "eks-dev-cluster-nat-eip-1",
              "Project": "EKS-Platform"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terragrunt",
              "Name": "eks-dev-cluster-nat-eip-1",
              "Project": "EKS-Platform"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.eks_igw",
            "aws_vpc.eks_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fa7ad7aa877450ea",
            "arn": "arn:aws:ec2:us-east-1:028987315631:elastic-ip/eipalloc-0fa7ad7aa877450ea",
            "association_id": "eipassoc-031e5f579c93dd972",
            "domain": "vpc",
            "id": "eipalloc-0fa7ad7aa877450ea",
            "network_border_group": "us-east-1",
            "network_interface": "eni-08afdbaeb96984e27",
            "private_dns": "ip-10-0-2-58.ec2.internal",
            "private_ip": "10.0.2.58",
            "public_dns": "ec2-100-59-94-182.compute-1.amazonaws.com",
            "public_ip": "100.59.94.182",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terragrunt",
              "Name": "eks-dev-cluster-nat-eip-2",
              "Project": "EKS-Platform"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terragrunt",
              "Name": "eks-dev-cluster-nat-eip-2",
              "Project": "EKS-Platform"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.eks_igw",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "eks_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:028987315631:internet-gateway/igw-04d75e005918555aa",
            "id": "igw-04d75e005918555aa",
            "owner_id": "028987315631",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terragrunt",
              "Name": "eks-dev-cluster-igw",
              "Project": "EKS-Platform"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terragrunt",
              "Name": "eks-dev-cluster-igw",
              "Project": "EKS-Platform"
            },
            "vpc_id": "vpc-0086315d21fa4d87c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07a7292025dca094b",
            "association_id": "eipassoc-0f9043be1fe1f967e",
            "connectivity_type": "public",
            "id": "nat-056b003804ceb21c8",
            "network_interface_id": "eni-089146853e6a40cb6",
            "private_ip": "10.0.1.126",
            "public_ip": "107.21.108.79",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08c0c28a5cad23d96",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terragrunt",
              "Name": "eks-dev-cluster-nat-1",
              "Project": "EKS-Platform"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terragrunt",
              "Name": "eks-dev-cluster-nat-1",
              "Project": "EKS-Platform"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.eks_igw",
            "aws_subnet.public",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fa7ad7aa877450ea",
            "association_id": "eipassoc-031e5f579c93dd972",
            "connectivity_type": "public",
            "id": "nat-0eb2ab6f3fc96f293",
            "network_interface_id": "eni-08afdbaeb96984e27",
            "private_ip": "10.0.2.58",
            "public_ip": "100.59.94.182",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02206eeab09b9b1ed",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terragrunt",
              "Name": "eks-dev-cluster-nat-2",
              "Project": "EKS-Platform"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terragrunt",
              "Name": "eks-dev-cluster-nat-2",
              "Project": "EKS-Platform"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.eks_igw",
            "aws_subnet.public",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:028987315631:route-table/rtb-0e920c663457aa8d1",
            "id": "rtb-0e920c663457aa8d1",
            "owner_id": "028987315631",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-056b003804ceb21c8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terragrunt",
              "Name": "eks-dev-cluster-private-rt-1",
              "Project": "EKS-Platform"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terragrunt",
              "Name": "eks-dev-cluster-private-rt-1",
              "Project": "EKS-Platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0086315d21fa4d87c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.eks_igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:028987315631:route-table/rtb-0b09f980d69d4f090",
            "id": "rtb-0b09f980d69d4f090",
            "owner_id": "028987315631",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0eb2ab6f3fc96f293",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terragrunt",
              "Name": "eks-dev-cluster-private-rt-2",
              "Project": "EKS-Platform"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terragrunt",
              "Name": "eks-dev-cluster-private-rt-2",
              "Project": "EKS-Platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0086315d21fa4d87c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.eks_igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:028987315631:route-table/rtb-06b3c92bf14e92046",
            "id": "rtb-06b3c92bf14e92046",
            "owner_id": "028987315631",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04d75e005918555aa",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terragrunt",
              "Name": "eks-dev-cluster-public-rt",
              "Project": "EKS-Platform"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terragrunt",
              "Name": "eks-dev-cluster-public-rt",
              "Project": "EKS-Platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0086315d21fa4d87c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.eks_igw",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd81d2212a96f52c",
            "route_table_id": "rtb-0e920c663457aa8d1",
            "subnet_id": "subnet-078165fd6b2efa86e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.eks_igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01c193c05ff91e85e",
            "route_table_id": "rtb-0b09f980d69d4f090",
            "subnet_id": "subnet-02fe587d096afed7d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.eks_igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-060f3088b519bd780",
            "route_table_id": "rtb-06b3c92bf14e92046",
            "subnet_id": "subnet-08c0c28a5cad23d96"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.eks_igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-002f4a60e705e3f0a",
            "route_table_id": "rtb-06b3c92bf14e92046",
            "subnet_id": "subnet-02206eeab09b9b1ed"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.eks_igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:028987315631:subnet/subnet-078165fd6b2efa86e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-078165fd6b2efa86e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "028987315631",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terragrunt",
              "Name": "eks-dev-cluster-private-subnet-1",
              "Project": "EKS-Platform",
              "Type": "Private",
              "kubernetes.io/cluster/eks-dev-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terragrunt",
              "Name": "eks-dev-cluster-private-subnet-1",
              "Project": "EKS-Platform",
              "Type": "Private",
              "kubernetes.io/cluster/eks-dev-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0086315d21fa4d87c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:028987315631:subnet/subnet-02fe587d096afed7d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02fe587d096afed7d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "028987315631",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terragrunt",
              "Name": "eks-dev-cluster-private-subnet-2",
              "Project": "EKS-Platform",
              "Type": "Private",
              "kubernetes.io/cluster/eks-dev-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terragrunt",
              "Name": "eks-dev-cluster-private-subnet-2",
              "Project": "EKS-Platform",
              "Type": "Private",
              "kubernetes.io/cluster/eks-dev-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0086315d21fa4d87c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:028987315631:subnet/subnet-08c0c28a5cad23d96",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08c0c28a5cad23d96",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "028987315631",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terragrunt",
              "Name": "eks-dev-cluster-public-subnet-1",
              "Project": "EKS-Platform",
              "Type": "Public",
              "kubernetes.io/cluster/eks-dev-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terragrunt",
              "Name": "eks-dev-cluster-public-subnet-1",
              "Project": "EKS-Platform",
              "Type": "Public",
              "kubernetes.io/cluster/eks-dev-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0086315d21fa4d87c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:028987315631:subnet/subnet-02206eeab09b9b1ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02206eeab09b9b1ed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "028987315631",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terragrunt",
              "Name": "eks-dev-cluster-public-subnet-2",
              "Project": "EKS-Platform",
              "Type": "Public",
              "kubernetes.io/cluster/eks-dev-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terragrunt",
              "Name": "eks-dev-cluster-public-subnet-2",
              "Project": "EKS-Platform",
              "Type": "Public",
              "kubernetes.io/cluster/eks-dev-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0086315d21fa4d87c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:028987315631:vpc/vpc-0086315d21fa4d87c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e081bca4c7b8d402",
            "default_route_table_id": "rtb-0a18309bf5a14668b",
            "default_security_group_id": "sg-0f5f2cd8c28e73997",
            "dhcp_options_id": "dopt-01c5d3c9f0bba476d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0086315d21fa4d87c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a18309bf5a14668b",
            "owner_id": "028987315631",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terragrunt",
              "Name": "eks-dev-cluster-vpc",
              "Project": "EKS-Platform"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terragrunt",
              "Name": "eks-dev-cluster-vpc",
              "Project": "EKS-Platform"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "dev",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "environment": "development"
                },
                "name": "dev",
                "resource_version": "220011",
                "uid": "f4fe779c-6ff0-4dee-bf87-c38e932cb1c1"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "dev"
          },
          "dependencies": [
            "aws_eks_cluster.main",
            "aws_eks_node_group.main",
            "aws_iam_role.eks_cluster_role",
            "aws_iam_role.eks_node_role",
            "aws_iam_role_policy_attachment.eks_cluster_policy",
            "aws_iam_role_policy_attachment.eks_cni_policy",
            "aws_iam_role_policy_attachment.eks_registry_policy",
            "aws_iam_role_policy_attachment.eks_vpc_resource_controller",
            "aws_iam_role_policy_attachment.eks_worker_node_policy",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available",
            "data.aws_eks_cluster_auth.cluster"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "prod",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "environment": "production"
                },
                "name": "prod",
                "resource_version": "220010",
                "uid": "a82b89cf-1f24-4d1e-b298-e781e14b2f6d"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "prod"
          },
          "dependencies": [
            "aws_eks_cluster.main",
            "aws_eks_node_group.main",
            "aws_iam_role.eks_cluster_role",
            "aws_iam_role.eks_node_role",
            "aws_iam_role_policy_attachment.eks_cluster_policy",
            "aws_iam_role_policy_attachment.eks_cni_policy",
            "aws_iam_role_policy_attachment.eks_registry_policy",
            "aws_iam_role_policy_attachment.eks_vpc_resource_controller",
            "aws_iam_role_policy_attachment.eks_worker_node_policy",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available",
            "data.aws_eks_cluster_auth.cluster"
          ]
        }
      ]
    }
  ]
}